package pb;

message CameraServerItem {
    required string  mac         = 1;
    required string  serverGuid  = 2;
    required int64   timestamp   = 3;
}

message CameraServerItems {
    repeated CameraServerItem cameraServerItem = 1;
}
